# tongs

./: Cargo.toml  FORK_NOTES.md  LICENSE  README.md
.forgejo/workflows/: ci.yml
crates/tongs/: Cargo.toml
crates/tongs/examples/: anthropic_reset_repro.rs  codex_smoke.rs
crates/tongs/src/: auth.rs  config.rs  error.rs  lib.rs  model.rs  provider.rs  runtime.rs  sse.rs  util.rs
crates/tongs/src/http/: client.rs  mod.rs
crates/tongs/src/providers/: anthropic.rs  anthropic_tests.rs  mod.rs  openai_completions.rs  openai_completions_tests.rs  openai_responses.rs  openai_responses_tests.rs  wire.rs
crates/tongs/src/tools/: bash.rs  edit.rs  find.rs  grep.rs  ls.rs  mod.rs  read.rs  support.rs  write.rs
crates/tongs/tests/: providers_e2e.rs  subject_conformance.rs  subject_record.rs  tools_integration.rs
crates/tongs/tests/fixtures/anthropic/parallel-tool-calls/recordings/tongs/: meta.json  request.json  response.headers  response.sse
crates/tongs/tests/fixtures/anthropic/single-text/recordings/tongs/: meta.json  request.json  response.headers  response.sse
crates/tongs/tests/fixtures/anthropic/tool-call/recordings/tongs/: meta.json  request.json  response.headers  response.sse
crates/tongs/tests/fixtures/anthropic/tool-result-final/recordings/tongs/: meta.json  request.json  response.headers  response.sse
crates/tongs/tests/fixtures/codex/single-text/recordings/tongs/: meta.json  request.json  response.headers  response.sse
crates/tongs/tests/fixtures/codex/tool-call/recordings/tongs/: meta.json  request.json  response.headers  response.sse
crates/tongs/tests/fixtures/codex/tool-result-final/recordings/tongs/: meta.json  request.json  response.headers  response.sse
crates/tongs/tests/fixtures/openai/parallel-tool-calls/recordings/tongs/: meta.json  request.json  response.headers  response.sse
crates/tongs/tests/fixtures/openai/single-text/recordings/tongs/: meta.json  request.json  response.headers  response.sse
crates/tongs/tests/fixtures/openai/tool-call/recordings/tongs/: meta.json  request.json  response.headers  response.sse
crates/tongs/tests/fixtures/openai/tool-result-final/recordings/tongs/: meta.json  request.json  response.headers  response.sse
crates/tongs/tests/support/: auth.rs  mod.rs  subject.rs
