[workspace]
members = ["crates/tongs"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
# skein's let-chain usage sets the floor at 1.88, same as smith/temper/anvil.
rust-version = "1.88"
version = "0.1.0"

[workspace.dependencies]
skein = { git = "http://127.0.0.1:3000/ai/skein.git", rev = "d2c98ecbad0825cdfef7feeb58f1e7f7e4f4d853", features = ["tls", "tls-native-roots"] }
jig-core = { git = "http://127.0.0.1:3000/ai/jig.git", rev = "32e1f9ead7c25bb1e7b8af13e28525f2e97171e9" }
jig-record = { git = "http://127.0.0.1:3000/ai/jig.git", rev = "32e1f9ead7c25bb1e7b8af13e28525f2e97171e9" }
jig-server = { git = "http://127.0.0.1:3000/ai/jig.git", rev = "32e1f9ead7c25bb1e7b8af13e28525f2e97171e9" }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
futures-core = "0.3"
globset = "0.4"
ignore = "0.4"
regex = "1"

[workspace.lints.rust]
unsafe_code = "forbid"
